<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/bhtIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bht_kompass_icon"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_below="@id/bhtIcon"
        android:layout_height="fill_parent"
        android:background="@drawable/rectangle">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_below="@id/bhtIcon">

        <TextView
            android:id="@+id/anmelden"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/rubik_medium"
            android:text="Anmelden"
            android:textColor="@color/white"
            android:textSize="40dp"/>

        <TextView
            android:id="@+id/userNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/anmelden"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/rubik"
            android:text="Anmeldename"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:inputType="text"
            android:maxLines="1"
            android:layout_height="40dp"
            android:textSize="20dp"
            android:paddingLeft="15dp"
            android:fontFamily="@font/rubik"
            android:textColor="@color/black"
            android:layout_below="@id/userNameText"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_normal"/>

        <TextView
            android:id="@+id/passwordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userName"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/rubik"
            android:text="Passwort"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/passwordLayout"
            android:orientation="horizontal"
            android:layout_below="@+id/passwordText">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="20dp"
                app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24"
                android:paddingLeft="15dp"
                android:fontFamily="@font/rubik"
                android:textColor="@color/black"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="8dp"
                android:inputType="textPassword"
                android:background="@drawable/button_normal"/>

            <ImageView
                android:id="@+id/hintPassword"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="-60dp"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:src="@drawable/ic_baseline_remove_red_eye_24_hint"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/passwordLayout"
            android:fontFamily="@font/rubik_medium"
            android:layout_marginTop="44dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_centerHorizontal="true"
            android:text="Login"
            android:background="@drawable/button_selector"/>

        <TextView
            android:id="@+id/passwordForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Passwort vergessen?"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/rubik"
            android:textColor="@color/black"
            android:clickable="true"
            android:layout_below="@id/login"/>

        <TextView
            android:id="@+id/hasNoUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ich habe keinen Benutzer"
            android:fontFamily="@font/rubik_medium"
            android:textSize="20dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/passwordForgot"
            android:textColor="@drawable/textcolor_textview"
            android:layout_centerHorizontal="true"
            android:clickable="true" />

        <FrameLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3dp"
            android:layout_below="@id/passwordLayout">
            <ProgressBar
                android:id="@+id/loading"
                style="?android:attr/progressBarStyle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:indeterminateTint="@color/white"/>
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/hasNoUser"/>



    </RelativeLayout>

    </ScrollView>

</RelativeLayout>