...
            android:layout_below="@id/homeText"
            android:layout_marginTop="40dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/top"
        android:layout_marginTop="-80dp">

        <RelativeLayout
...
                android:clickable="true"
                android:layout_below="@+id/profile_image"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_Icon_layout"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/rubik_medium"
            android:layout_marginTop="10dp"
...
